<resources>
    <string name="app_name">buttomNavigation</string>
    <string name="Home">Home</string>
    <string name="Account">Account</string>
    <string name="Location">Location</string>
    <string name="Money">Money</string>
    <string name="Connect">Connect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>