<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_Home"
        android:icon="@drawable/listhomepagebtn"
        android:title="@string/Home" />

    <item
        android:id="@+id/navigation_Account"
        android:icon="@drawable/listuseraccountbtn"
        android:title="@string/Account" />

    <item
        android:id="@+id/navigation_Location"
        android:icon="@drawable/listlocationbtn"
        android:title="@string/Location" />

    <item
        android:id="@+id/navigation_Money"
        android:icon="@drawable/listmoneybtn"
        android:title="@string/Money" />

    <item
        android:id="@+id/navigation_Connect"
        android:icon="@drawable/listsettingbtn"
        android:title="@string/Connect" />
</menu>